# tei-viewer

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  MOBILE_FIXES.txt  MOBILE_IMAGE_ZOOM.md  MOBILE_RESPONSIVE_IMPROVEMENTS.md  NEW_PROJECT_CHECKLIST.md  README.md  README_MOBILE_BRANCH.md  TESTING_RESPONSIVE.md  TRACTATUS_FIX.txt  WORK_SESSION_SUMMARY.md  build_page_list.sh  deploy-gh-pages.sh  deploy.sh  docker-compose.yml  fix_tractatus_coords.py  fix_tractatus_order.py  index.html  iosevka-4b2e30e1aeb1b5e3.css  page2tei.py  page_p1_dip.xml  start.sh  sync_projects.sh  tei-viewer-9079238c04859278.js  tei-viewer-9079238c04859278_bg.wasm  tei-viewer-9dce7053ddf5252f_bg.wasm  tei-viewer-af8d94cefc74c87.js  tei-viewer-af8d94cefc74c87_bg.wasm  tei-viewer-c8d0c7599b6326f8.js  tei-viewer-c8d0c7599b6326f8_bg.wasm  tei-viewer-d3133c7c400639fc.js  tei-viewer-d3133c7c400639fc_bg.wasm  update.sh
.github/workflows/: deploy.yml
deployment/: DEPLOYMENT_DECISION_TREE.md  GITHUB_PAGES.md  README.md  apache.conf  nginx-docker.conf  nginx.conf  tei-viewer.service
projects/PGM-XIII/: manifest.json  p1_dip.xml  p1_trad.xml  p2_dip.xml  p2_trad.xml  p3_dip.xml  p3_trad.xml
public/projects/Tractatus/: commentary.html  manifest.json  p1_dip.xml  p1_trad.xml  p2_dip.xml  p2_trad.xml  p3_dip.xml  p3_trad.xml  p4_dip.xml  p4_trad.xml  p5_dip.xml  p5_trad.xml  p6_dip.xml  p6_trad.xml  p7_dip.xml  (+3 more)
src/: generated_pages.rs  main.rs  project_config.rs  tei_data.rs  tei_parser.rs  utils.rs
src/components/: image_viewer.rs  mod.rs  tei_viewer.rs
static/: iosevka.css  styles.css
