[package]
name = "tei-viewer"
version = "0.1.0"
edition = "2021"

[dependencies]
web-sys = { version = "0.3.82", features = ["Window", "Document", "HtmlImageElement", "WheelEvent", "KeyboardEvent", "Event"] }
yew = { version = "0.21", features = ["csr"]}
gloo = { version = "0.11" }
gloo-utils = { version = "0.2" }
gloo-events = { version = "0.2" }
wasm-bindgen = "0.2"
