[package]
name = "tei-viewer"
version = "0.1.0"
edition = "2021"

[dependencies]
web-sys = { version = "0.3.82", features = [
    "Window",
    "Document",
    "HtmlImageElement",
    "WheelEvent",
    "KeyboardEvent",
    "Event",
    "HtmlElement",
    "Element",
    "DomRect",
    "MouseEvent",
    "HtmlSelectElement",
    "CssStyleDeclaration"
] }
yew = { version = "0.21", features = ["csr"]}
js-sys = "0.3"
gloo = { version = "0.11" }
gloo-utils = { version = "0.2" }
gloo-events = { version = "0.2" }
gloo-net = { version = "0.5", features = ["http"] }
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
quick-xml = { version = "0.31", features = ["serialize"] }
wasm-bindgen-futures = "0.4"
wasm-logger = "0.2"
log = "0.4"
